[package]
name = "nanocraft"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.2", features = ["debug_error_checks"] }
ultraviolet = "0.7"

# these should be dev dependencies, but i use the bin directory
# during dev so they live here, except during a crates.io release
beryllium = "0.13.3"
imagine = "0.0.5"